responsive styling added with two breakpoints

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="container">
 		<article class="article">
-			<form>
+			<form class="slider-form">
 				<label>
 					<span>Hue Rotate</span>
 					<input id="hue" type="range" min="0" max="360" value="0" />
