--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
 			<form class="slider-form">
 				<label>
 					<span>Hue Rotate</span>
-					<input id="hue" type="range" min="0" max="360" value="0" />
+					<input aria-label="Hue Rotate" id="hue" type="range" min="0" max="360" value="0" />
 				</label>
 
 				<label>
 					<span>Blur</span>
-					<input id="blur" type="range" min="0" max="40" value="0" />
+					<input aria-label="Blur" id="blur" type="range" min="0" max="40" value="0" />
 				</label>
 
 				<label>
 					<span>Contrast</span>
-					<input id="contrast" type="range" min="0" max="400" value="50" />
+					<input aria-label="Contrast" id="contrast" type="range" min="0" max="400" value="50" />
 				</label>
 
 				<label>
 					<span>Saturation</span>
-					<input id="saturation" type="range" min="0" max="200" value="100" />
+					<input aria-label="Saturation" id="saturation" type="range" min="0" max="200" value="100" />
 				</label>
 			</form>
       <figure>
